logs/validate.20260406-182617.log
error[E0433]: failed to resolve: could not find `Chap37` in the crate root
   --> src/Chap38/OrdKeyMap.rs:36:16
    |
 36 |     use crate::Chap37::AVLTreeSeqStPer::AVLTreeSeqStPer::*;
    |                ^^^^^^ could not find `Chap37` in the crate root
    |
note: found an item that was configured out
   --> src/lib.rs:419:9
    |
418 | #[cfg(all(not(feature = "experiments_only"), any(not(feature = "isolate"), feature = "Chap37")))]
    |                                                 ---------------------------------------------- the item is gated here
419 | pub mod Chap37 {
    |         ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 202MB, peak z3 RSS: 0MB, min free: 18222MB
Sampled CPU Usage: rust_verify: 1s, z3 children: 0s
